[gd_scene load_steps=20 format=3 uid="uid://3nphprqd1it8"]

[ext_resource type="PackedScene" uid="uid://cc4fq5x80sure" path="res://Scenes/player.tscn" id="1_eo6vi"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_jojh5"]
[ext_resource type="PackedScene" uid="uid://d1jafpuwvy3d0" path="res://Scenes/mob.tscn" id="2_jwed4"]
[ext_resource type="PackedScene" uid="uid://bh48jxqg3q5jl" path="res://Scenes/castle.tscn" id="4_132h1"]
[ext_resource type="PackedScene" uid="uid://d2hbtaulje8em" path="res://Scenes/hud.tscn" id="5_24kkr"]
[ext_resource type="Shader" path="res://Graphics/flowShader.gdshader" id="5_ie5a8"]
[ext_resource type="Texture2D" uid="uid://ca0emmen6kvp4" path="res://Graphics/icon.svg" id="6_rkdrj"]
[ext_resource type="AudioStream" uid="uid://35jfxy4vlym0" path="res://Sound/big-explosion-6801.mp3" id="8_03yxr"]
[ext_resource type="Script" path="res://Scripts/GameStateMachine.gd" id="9_kybq8"]
[ext_resource type="Script" path="res://Scripts/GameState_StartUp.gd" id="10_sk2ud"]
[ext_resource type="Script" path="res://Scripts/GameState_MainMenu.gd" id="11_qjgcc"]
[ext_resource type="Script" path="res://Scripts/GameState_Playing_Action.gd" id="12_1sd5n"]
[ext_resource type="Script" path="res://Scripts/GameState_Playing_CardSelection.gd" id="13_3oitj"]
[ext_resource type="Script" path="res://Scripts/GameState_Playing_GameOver.gd" id="14_sx1bj"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vua4k"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_gcp24"]
noise = SubResource("FastNoiseLite_vua4k")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5ugkn"]
seed = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ld3ie"]
noise = SubResource("FastNoiseLite_5ugkn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qn386"]
shader = ExtResource("5_ie5a8")
shader_parameter/noiseX = SubResource("NoiseTexture2D_gcp24")
shader_parameter/noiseY = SubResource("NoiseTexture2D_ld3ie")

[node name="Main" type="Node"]
script = ExtResource("1_jojh5")
mob_scene = ExtResource("2_jwed4")
player_scene = ExtResource("1_eo6vi")
castle_scene = ExtResource("4_132h1")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qn386")
position = Vector2(600, 400)
scale = Vector2(9.375, 6.25)
texture = ExtResource("6_rkdrj")

[node name="MobTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_24kkr")]
unique_name_in_owner = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_03yxr")
volume_db = -10.0
pitch_scale = 1.88

[node name="GameStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_kybq8")

[node name="StartUp" type="Node" parent="GameStateMachine"]
script = ExtResource("10_sk2ud")

[node name="TitleTimer" type="Timer" parent="GameStateMachine/StartUp"]
wait_time = 3.0

[node name="MainMenu" type="Node" parent="GameStateMachine"]
script = ExtResource("11_qjgcc")

[node name="Playing_Action" type="Node" parent="GameStateMachine"]
script = ExtResource("12_1sd5n")

[node name="Playing_CardSelection" type="Node" parent="GameStateMachine"]
script = ExtResource("13_3oitj")

[node name="Playing_GameOver" type="Node" parent="GameStateMachine"]
script = ExtResource("14_sx1bj")

[node name="Timer" type="Timer" parent="GameStateMachine/Playing_GameOver"]
wait_time = 3.0

[connection signal="increase_score" from="." to="." method="_on_increase_score"]
